# lpm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Design.md  LICENSE  LpmConfig.h.in  README.md  compadre.cmake  kokkos.cmake  setup
examples/: CMakeLists.txt  SphereMeshInit.cpp  SphereVorticity.cpp  bve_rotation.cpp  dfs_bve_gauss_vort.cpp  dfs_bve_rh54.cpp  dfs_bve_rhE.cpp  dfs_polar_vortex.cpp  lpm_dfs_polar_vortex.cpp  plane_colliding_dipoles.cpp  plane_gravity_wave.cpp  plane_swe_gaussian_tests.cpp  plane_swe_high_order.cpp  plane_swe_high_order_tests.cpp  sphere_convergence_tests.cpp  sphere_from_data.cpp  sphere_gaussian_vortex.cpp  sphere_mesh_init.cpp  sphere_rh54.cpp  sphere_staggered_swe_tc2.cpp  sphere_swe_tc2.cpp  sphere_transport.cpp  sphere_transport_amr.cpp
ext/: CMakeLists.txt
sphere_lpm_code/: CMakeLists.txt
sphere_lpm_code/scripts/: .configure.sh.swp  configure.sh  configure_kokkos.sh  configure_kokkos_kernels.sh
sphere_lpm_code/src/: CMakeLists.txt  dfs_doubling.cpp  dfs_doubling.hpp  dfs_interpolation.cpp  dfs_laplacian_new.cpp  dfs_rhs_new.cpp  dfs_rhs_new.hpp  dfs_solve_new.cpp  dfs_surface_grad.cpp  dfs_surface_grad.hpp  dfs_test_support.cpp  dfs_velocity.cpp  dfs_velocity.hpp  dfs_vort2velocity.cpp  dfs_vort2velocity.hpp  kokkos_dfs_types.hpp
sphere_lpm_code/test/: CMakeLists.txt  dfs_Hsolver_test.cpp  dfs_coeffs2vals_test.cpp  dfs_derivative_test.cpp  dfs_divcos_test.cpp  dfs_divsin_test.cpp  dfs_dotgrad_test.cpp  dfs_doubling_test.cpp  dfs_finufft_test.cpp  dfs_gridv_test.cpp  dfs_helmholtz_test.cpp  dfs_laplacian_test.cpp  dfs_mattrig_test.cpp  dfs_multi_cos2theta.cpp  dfs_multicos_test.cpp  dfs_poisson_test.cpp  dfs_rhs_test.cpp  dfs_surfgrad_test.cpp  dfs_tridiag_solve_test.cpp  dfs_vals2coeffs_test.cpp  dfs_vort2velocity_test.cpp
src/: CMakeLists.txt  CMakeLists.txt.orig  LpmBVEKernels.hpp  LpmBVERK4.cpp  LpmBVERK4.hpp  LpmBVESphere.cpp  LpmBVESphere.hpp  LpmBox3d.hpp  LpmCompadre.cpp  LpmCompadre.hpp  LpmCompadreInterface.hpp  LpmCoords.cpp  LpmCoords.hpp  LpmDefs.hpp  LpmEdges.cpp  LpmEdges.hpp  LpmErrorNorms.cpp  LpmErrorNorms.hpp  LpmFaces.cpp  LpmFaces.hpp  LpmGaussGrid.cpp  LpmGaussGrid.hpp  LpmGeometry.hpp  LpmKokkosUtil.hpp  LpmLatLonMesh.cpp  LpmLatLonMesh.hpp  LpmMatlabIO.cpp  LpmMatlabIO.hpp  LpmMeshSeed.cpp  LpmMeshSeed.hpp  LpmNetCDF.cpp  LpmNetCDF.hpp  LpmNetCDF_Impl.hpp  LpmNodeArrayD.cpp  LpmNodeArrayD.hpp  LpmNodeArrayInternal.cpp  LpmNodeArrayInternal.hpp  LpmOctree.cpp  LpmOctree.hpp  LpmOctreeKernels.hpp  (+138 more)
src/dfs/: dfs_config.hpp  dfs_doubling.cpp  dfs_doubling.hpp  dfs_interpolation.cpp  dfs_interpolation.hpp  dfs_laplacian_new.cpp  dfs_laplacian_new.hpp  dfs_rhs_new.cpp  dfs_rhs_new.hpp  dfs_solve_new.cpp  dfs_solve_new.hpp  dfs_surface_grad.cpp  dfs_surface_grad.hpp  dfs_swe_vort2velocity_to_ddproduct.cpp  dfs_swe_vort2velocity_to_ddproduct.hpp  dfs_test_support.hpp  dfs_velocity.cpp  dfs_velocity.hpp  dfs_vort2velocity.cpp  dfs_vort2velocity.hpp  lpm_compadre_dfs_remesh.cpp  lpm_compadre_dfs_remesh.hpp  lpm_compadre_dfs_remesh_impl.hpp  lpm_dfs_bve.hpp  lpm_dfs_bve_impl.hpp  lpm_dfs_bve_solver.hpp  lpm_dfs_bve_solver_impl.hpp  lpm_dfs_grid.cpp  lpm_dfs_grid.hpp  lpm_dfs_polar_vortex_solver.cpp  lpm_dfs_polar_vortex_solver.hpp  lpm_dfs_polar_vortex_solver_impl.hpp
src/fortran/: CMakeLists.txt  bivar.f90  lpm_bivar_interface.cpp  lpm_bivar_interface.hpp  lpm_bivar_interface_impl.hpp  lpm_f_interp.cpp  lpm_f_interp.hpp  lpm_f_interp_impl.hpp  lpm_ssrfpack_interface.hpp  lpm_ssrfpack_interface_impl.hpp  ssrfpack.f  stripack.f
src/mesh/: lpm_bivar_remesh.cpp  lpm_bivar_remesh.hpp  lpm_bivar_remesh_impl.hpp  lpm_compadre_remesh.cpp  lpm_compadre_remesh.hpp  lpm_compadre_remesh_impl.hpp  lpm_edges.cpp  lpm_edges.hpp  lpm_faces.cpp  lpm_faces.hpp  lpm_faces_impl.hpp  lpm_ftle.hpp  lpm_gather_mesh_data.cpp  lpm_gather_mesh_data.hpp  lpm_gather_mesh_data_impl.hpp  lpm_mesh_seed.cpp  lpm_mesh_seed.hpp  lpm_native_interp.hpp  lpm_polymesh2d.cpp  lpm_polymesh2d.hpp  lpm_polymesh2d_functions.hpp  lpm_polymesh2d_impl.hpp  lpm_polymesh2d_parameters.hpp  lpm_polymesh2d_parameters_impl.hpp  lpm_polymesh_parameters.cpp  lpm_refinement.hpp  lpm_refinement_flags.hpp  lpm_scatter_mesh_data.cpp  lpm_scatter_mesh_data.hpp  lpm_scatter_mesh_data_impl.hpp  lpm_vertices.cpp  lpm_vertices.hpp  lpm_vertices_impl.hpp
src/netcdf/: lpm_netcdf.cpp  lpm_netcdf.hpp  lpm_netcdf_impl.hpp  lpm_netcdf_reader.cpp  lpm_netcdf_reader.hpp  lpm_netcdf_reader_impl.hpp  lpm_netcdf_writer.cpp  lpm_netcdf_writer.hpp
src/obj_dfs/: dfs_fft.hpp  dfs_lhs_poisson.cpp  dfs_lhs_poisson.hpp  dfs_nufft.hpp  dfs_rhs.cpp  dfs_rhs.hpp  dfs_solver.cpp  dfs_solver.hpp
src/tables/: ChildLUT.csv
src/tree/: lpm_box2d.cpp  lpm_box2d.hpp  lpm_box3d.cpp  lpm_box3d.hpp  lpm_cpu_tree.cpp  lpm_cpu_tree.hpp  lpm_gpu_octree.cpp  lpm_gpu_octree.hpp  lpm_gpu_octree_functions.hpp  lpm_gpu_octree_kernels.hpp  lpm_gpu_octree_lookup_tables.cpp  lpm_gpu_octree_lookup_tables.hpp  lpm_node_array_2d.cpp  lpm_node_array_2d.hpp  lpm_node_array_2d_impl.hpp  lpm_node_array_2d_internal.cpp  lpm_node_array_2d_internal.hpp  lpm_node_array_d.cpp  (+12 more)
tests/: CMakeLists.txt  LpmBVETest.cpp  LpmBox3DUnitTests.cpp  LpmCompadreTests.cpp  LpmCoordsUnitTest.cpp  LpmEdgesUnitTest.cpp  LpmFacesUnitTests.cpp  LpmGMLSTest.cpp  LpmGaussGridTests.cpp  LpmGeometryUnitTests.cpp  LpmKernelTest.cpp  LpmKokkosKernelsTests.cpp  LpmLatLonMeshTests.cpp  LpmMeshSeedUnitTest.cpp  LpmNetCDFTest.cpp  LpmNodeArrayDUnitTests.cpp  LpmNodeArrayInternalTests.cpp  LpmOctreeKernelTests.cpp  LpmOctreeKeyTests.cpp  LpmOctreeLUTUnitTests.cpp  LpmOctreeTests.cpp  LpmOctreeUtilsUnitTests.cpp  LpmPlanePSETest.cpp  LpmPlaneSWETest.cpp  LpmPolyMeshTest.cpp  LpmRealVecUnitTest.cpp  LpmSeedReaderUnitTest.cpp  LpmSpherePoisson.cpp  LpmSphereVoronoiMeshUnitTests.cpp  LpmSphereVoronoiPrimitivesUnitTests.cpp  lpm_2d_transport_tests.cpp  lpm_bivar_tests.cpp  lpm_box2d_tests.cpp  lpm_box3d_tests.cpp  lpm_bve_test.cpp  lpm_comm_tests.cpp  lpm_compadre_unit_tests.cpp  lpm_coords_test.cpp  lpm_cpu_tree_tests.cpp  lpm_dfs_bve_test.cpp  (+40 more)
(+111 files in other folders)
